--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ async function sendMessage() {
       method: "POST",
       headers: {
         "Content-Type": "application/json",
-        "Authorization": "Bearer " + process.env.OPENAI_API_KEY
+        "Authorization": `Bearer ${process.env.OPENAI_API_KEY}`
       },
       body: JSON.stringify({ model: "gpt-4", messages: messages, max_tokens: 500 })
     });
