--- a/index.html
+++ b/index.html
@@ -65,12 +65,9 @@ async function sendMessage() {
   ];
 
   try {
-    const response = await fetch("https://api.openai.com/v1/chat/completions", {
+    const response = await fetch("/api/chat", {
       method: "POST",
-      headers: {
-        "Content-Type": "application/json",
-        "Authorization": `Bearer ${process.env.OPENAI_API_KEY}`
-      },
+      headers: { "Content-Type": "application/json" },
       body: JSON.stringify({ model: "gpt-4", messages: messages, max_tokens: 500 })
     });
 
